# nbsapi

./: .dockerignore  .env  CNAME  Dockerfile  LICENSE.md  README.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: tests.yml
src/alembic/: env.py
src/alembic/versions/: 3adb8ef43629_initial_revision.py  4f84df901480_add_geometry_column_to_nbs_model.py  97f61574300b_move_adaptation_value_to_association_.py
src/nbsapi/: __init__.py  api.py  api.yaml  config.py  database.py  main.py  solutions.json
src/nbsapi/api/dependencies/: core.py  naturebasedsolution.py
src/nbsapi/api/routers/: adaptationtargets.py  naturebasedsolutions.py
src/nbsapi/crud/: adaptationtarget.py  naturebasedsolution.py
src/nbsapi/models/: __init__.py  adaptation_target.py  naturebasedsolution.py
src/nbsapi/schemas/: adaptationtarget.py  naturebasedsolution.py
tests/: test_api.py
