[project]
name = "nbsapi"
authors = [
    { name="Stephan Hügel", email="urschrei@gmail.com" }
]
requires-python = ">=3.12"
license = {text = "MIT License"}
keywords = ["Geo"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS"
    ]
version = "0.1.0"
description = "An API for nature-based solutions"
readme = "README.md"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.112.2",
    "geoalchemy2>=0.15.2",
    "geojson>=3.1.0",
    "greenlet>=3.1.0",
    "httpx>=0.27.2",
    "psycopg>=3.2.1",
    "pydantic-settings>=2.5.2",
    "pyproj>=3.6.1",
    "pytest",
    "shapely>=2.0.6",
    "sqlmodel>=0.0.22",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nbsapi"]
